--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ngrx/effects": "^15.1.0",
+    "@ngrx/store": "^15.1.0",
+    "@syncfusion/ej2-angular-richtexteditor": "^20.4.42",
+    "@syncfusion/ej2-base": "^20.4.42",
+    "@syncfusion/ej2-material-theme": "~20.4.42",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
