--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@angular/core": "^15.0.0",
     "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.0.4",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@ngrx/effects": "^15.1.0",
     "@ngrx/store": "^15.1.0",
+    "@popperjs/core": "^2.11.6",
     "@syncfusion/ej2-angular-richtexteditor": "^20.4.42",
     "@syncfusion/ej2-base": "^20.4.42",
     "@syncfusion/ej2-material-theme": "~20.4.42",
+    "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -33,6 +36,7 @@
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
+    "@angular/localize": "^15.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
