--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@syncfusion/ej2-material-theme": "~20.4.42",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.5.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
